@@ -1163,3 +1163,9 @@ History:
   - dc_runtime_info()
     - "VMware Tools is installed, but it is not managed by VMWare" will except the previous point
       now lead to a warning (1) instead of a critical (2).
+
+- 10 Jun 2015 M.Fuerstenau version 0.9.26
+  - help()
+    - Bugfix: --nosession was printed out twice. Same line the not "not" was missing.
+      This was bad because it changed the meaning of the line. Same error in the command reference
+      because the reference is only the output from the help in a file.
